--- a/releasenotes/notes/istioctl-uninstall.yaml
+++ b/releasenotes/notes/istioctl-uninstall.yaml
@@ -3,5 +3,6 @@ kind: feature
 area: istioctl
 issue:
   - 24360
-releaseNotes: |
+releaseNotes:
+- |
   **Added** `istioctl x uninstall` command to uninstall Istio control plane.
