--- a/releasenotes/notes/24737.yaml
+++ b/releasenotes/notes/24737.yaml
@@ -6,7 +6,8 @@ area: traffic-management
 issue:
   - 11130
 
-releaseNotes: |
+releaseNotes:
+- |
   **Added** config option `values.global.proxy.holdApplicationUntilProxyStarts`,
   which causes the sidecar injector to inject the sidecar at the start of the
   pod's container list and configures it to block the start of all other
