--- a/releasenotes/notes/26001.yaml
+++ b/releasenotes/notes/26001.yaml
@@ -4,5 +4,6 @@ area: pilot
 issue:
   - 25339
 
-releaseNotes: |
+releaseNotes:
+- |
   **Added** sets timeout to fetch workload certs to 0 because workload certs are guaranteed to exist, making a timeout irrelevant.
