--- a/releasenotes/notes/add-release-notes-generation.yaml
+++ b/releasenotes/notes/add-release-notes-generation.yaml
@@ -3,6 +3,7 @@ kind: feature
 area: documentation
 issue:
 - https://github.com/istio/istio/issues/23622
-releaseNotes: |
+releaseNotes:
+- |
   **Added** support for autogenerating release notes based off of a file present in the /releasenotes/notes directory.
 
