--- a/releasenotes/notes/delay-app-start.yaml
+++ b/releasenotes/notes/delay-app-start.yaml
@@ -3,7 +3,8 @@ kind: feature
 area: networking
 issue:
 - 24737
-releaseNotes: |
+releaseNotes:
+- |
   **Added** an experimental option, `.values.global.proxy.holdApplicationUntilProxyStarts`, to ensure that the proxy starts before an application.
 
 
