--- a/releasenotes/notes/ecc-csr.yaml
+++ b/releasenotes/notes/ecc-csr.yaml
@@ -3,5 +3,6 @@ kind: feature
 area: security
 issue:
 - 23226
-releaseNotes: |
+releaseNotes:
+- |
   **Added** support for creation of CSRs using ECC based certificates.
