--- a/releasenotes/notes/ingress-named-port.yaml
+++ b/releasenotes/notes/ingress-named-port.yaml
@@ -3,5 +3,6 @@ kind: feature
 area: networking
 issue:
 - 23052
-releaseNotes: |
+releaseNotes:
+- |
   **Improved** support for Ingress by allowing named port references.
