--- a/releasenotes/notes/nonroot-gateway.yaml
+++ b/releasenotes/notes/nonroot-gateway.yaml
@@ -3,5 +3,6 @@ kind: feature
 area: installation
 issue:
 - 23379
-releaseNotes: |
+releaseNotes:
+- |
   **Improved** gateway deployments to run as non-root by default.
