--- a/releasenotes/notes/prom-rewrite.yaml
+++ b/releasenotes/notes/prom-rewrite.yaml
@@ -3,5 +3,6 @@ kind: feature
 area: telemetry
 issue:
 - 21366
-releaseNotes: |
+releaseNotes:
+- |
   **Enabled** Prometheus [metrics merging](/docs/ops/integrations/prometheus/#option-1-metrics-merging) by default.
