--- a/releasenotes/notes/psfile.yaml
+++ b/releasenotes/notes/psfile.yaml
@@ -1,5 +1,6 @@
 apiVersion: release-notes/v2
 kind: feature
 area: istioctl
-releaseNotes: |
+releaseNotes:
+- |
   **Added** Allow proxy-status for non-K8s workloads with --file
