--- a/releasenotes/notes/rpm-builds.yaml
+++ b/releasenotes/notes/rpm-builds.yaml
@@ -3,5 +3,6 @@ kind: feature
 area: installation
 issue:
 - 9117
-releaseNotes: |
+releaseNotes:
+- |
   **Added** RPM packages for running the Istio sidecar on a VM to the release.
