--- a/releasenotes/notes/mesh-expansion.yaml
+++ b/releasenotes/notes/mesh-expansion.yaml
@@ -4,9 +4,10 @@ area: installation
 issue:
 - 25933
 
-releaseNotes: |
+releaseNotes:
+- |
   *Added* port 15012 to the default list of ports for the `istio-ingressgateway` Service.
-
+- |
   *Deprecated* installation flags
   - `values.global.meshExpansion.enabled` in favor of user-managed config
   - `values.gateways.istio-ingressgateway.meshExpansionPorts` in favor of `components.ingressGateways[name=istio-ingressgateway].k8s.service.ports`
