--- a/releasenotes/notes/24471.yaml
+++ b/releasenotes/notes/24471.yaml
@@ -6,4 +6,4 @@ issue:
 
 releaseNotes:
 - |
-  **Added** 'istioctl analyze' now warns if deprecated mixer resources are present
+  **Added** `istioctl analyze` now warns if deprecated mixer resources are present
