--- a/releasenotes/notes/25302.yaml
+++ b/releasenotes/notes/25302.yaml
@@ -10,5 +10,5 @@ issue:
 # release notes.
 releaseNotes:
 - |
-  *Improved* `istioctl analyze` to find the exact line number with configuration errors when analyzing yaml files.
+  **Improved** `istioctl analyze` to find the exact line number with configuration errors when analyzing yaml files.
   Before, it would return the first line of the resource with the error.
