add forward compatibility with k8s admissions api v1 (#26312)
* add forward compatibility with k8s admissions api v1

* add support for v1 and v1beta1 AdmissionReview versions

* use admission API adapter in validating webhooks

(cherry picked from commit c4a14db008d6546d27b00d7318e3100eda8e2603)

--- a/manifests/charts/istio-control/istio-discovery/files/gen-istio.yaml
+++ b/manifests/charts/istio-control/istio-discovery/files/gen-istio.yaml
@@ -1529,6 +1529,7 @@ webhooks:
         apiVersions: ["v1"]
         resources: ["pods"]
     failurePolicy: Fail
+    admissionReviewVersions: ["v1beta1", "v1"]
     namespaceSelector:
       matchLabels:
         istio-injection: enabled
