--- a/pkg/config/schema/metadata.yaml
+++ b/pkg/config/schema/metadata.yaml
@@ -81,7 +81,7 @@ collections:
   ### K8s collections ###
 
   # Built-in K8s collections
-  - name: "k8s/apiextensions.k8s.io/v1/customresourcedefinitions"
+  - name: "k8s/apiextensions.k8s.io/v1beta1/customresourcedefinitions"
     kind: "CustomResourceDefinition"
     group: "apiextensions.k8s.io"
 
@@ -215,7 +215,7 @@ snapshots:
       - "istio/networking/v1alpha3/sidecars"
       - "istio/networking/v1alpha3/virtualservices"
       - "istio/security/v1beta1/authorizationpolicies"
-      - "k8s/apiextensions.k8s.io/v1/customresourcedefinitions"
+      - "k8s/apiextensions.k8s.io/v1beta1/customresourcedefinitions"
       - "k8s/apps/v1/deployments"
       - "k8s/core/v1/namespaces"
       - "k8s/core/v1/pods"
@@ -229,9 +229,9 @@ resources:
   - kind: "CustomResourceDefinition"
     plural: "CustomResourceDefinitions"
     group: "apiextensions.k8s.io"
-    version: "v1"
-    proto: "k8s.io.apiextensions_apiserver.pkg.apis.apiextensions.v1.CustomResourceDefinition"
-    protoPackage: "k8s.io/apiextensions-apiserver/pkg/apis/apiextensions/v1"
+    version: "v1beta1"
+    proto: "k8s.io.apiextensions_apiserver.pkg.apis.apiextensions.v1beta1.CustomResourceDefinition"
+    protoPackage: "k8s.io/apiextensions-apiserver/pkg/apis/apiextensions/v1beta1"
 
   - kind: "Deployment"
     plural: "Deployments"
@@ -430,7 +430,17 @@ resources:
 transforms:
   - type: direct
     mapping:
-      "k8s/apiextensions.k8s.io/v1/customresourcedefinitions": "k8s/apiextensions.k8s.io/v1/customresourcedefinitions"
+      "k8s/apiextensions.k8s.io/v1beta1/customresourcedefinitions": "k8s/apiextensions.k8s.io/v1beta1/customresourcedefinitions"
+      "k8s/config.istio.io/v1alpha2/adapters": "istio/config/v1alpha2/adapters"
+      "k8s/config.istio.io/v1alpha2/attributemanifests": "istio/policy/v1beta1/attributemanifests"
+      "k8s/config.istio.io/v1alpha2/handlers": "istio/policy/v1beta1/handlers"
+      "k8s/config.istio.io/v1alpha2/httpapispecs": "istio/config/v1alpha2/httpapispecs"
+      "k8s/config.istio.io/v1alpha2/httpapispecbindings": "istio/config/v1alpha2/httpapispecbindings"
+      "k8s/config.istio.io/v1alpha2/instances": "istio/policy/v1beta1/instances"
+      "k8s/config.istio.io/v1alpha2/quotaspecs": "istio/mixer/v1/config/client/quotaspecs"
+      "k8s/config.istio.io/v1alpha2/quotaspecbindings": "istio/mixer/v1/config/client/quotaspecbindings"
+      "k8s/config.istio.io/v1alpha2/rules": "istio/policy/v1beta1/rules"
+      "k8s/config.istio.io/v1alpha2/templates": "istio/config/v1alpha2/templates"
       "k8s/networking.istio.io/v1alpha3/destinationrules": "istio/networking/v1alpha3/destinationrules"
       "k8s/networking.istio.io/v1alpha3/envoyfilters": "istio/networking/v1alpha3/envoyfilters"
       "k8s/networking.istio.io/v1alpha3/gateways": "istio/networking/v1alpha3/gateways"
